# FP

./: FP_v1.hs  FPv2.rar  egzui.txt
FP_v2/: FPv2.cabal
FP_v2/.stack-work/install/ef077761/flag-cache/: Cabal-1.24.1.0-4DbvsdAtWsMF1yFXIQvfsG  alex-3.1.7  asn1-types-0.3.2-FQg5wDTaVh0IwfdUfCcNmt  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-6Lw6V3wDhf3KDMasjNOEeG  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  case-insensitive-1.2.0.7-FDS9muZSKvyFFsDxjwuYX9  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cryptonite-0.19-JQTQGTq5BGQJS9F2vRxlj  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  gtk2hs-buildtools-0.13.2.1-CnMaITLAxwR5wlcqxyWBA5  happy-1.19.5  hashtables-1.2.1.0-1ucWEA6Tnj1XvKrOj82Ys  hourglass-0.2.10-17WCSaZB7oBF5JMwDbmBMG  http-types-0.9.1-BTSIP6lzG5DE6u136Payws  memory-0.13-ABHR5331zHK9scHPRr7afU  mime-types-0.1.0.7-AnUYMmJkgUZLmjf93DTg5F  old-locale-1.0.0.7-6glXNhHF891B41ZfuI8hU8
FP_v2/app/: Main.hs
FP_v2/src/: Connection.hs  Game.hs  Models.hs  Parser.hs  Tactics.hs
FP_v2/test/: Spec.hs
