name:                FPv2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/FPv2#readme
license:             BSD3
license-file:        LICENSE
author:              Tadas
maintainer:          example@example.com
copyright:           Tadas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
                     , Models
                     , Connection
                     , Tactics
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , bytestring
                     , containers
                     , template-haskell
                     , random
  default-language:    Haskell2010

executable FPv2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FPv2
  default-language:    Haskell2010

test-suite FPv2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FPv2
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FPv2
